[package]
authors = ["elois <elois@duniter.org>"]
description = "Duniter launcher."
edition = "2018"
keywords = ["duniter", "launcher"]
license = "AGPL-3.0"
name = "duniter-launcher"
repository = "https://git.duniter.org/nodes/typescript/duniter"
version = "1.8.1"

[[bin]]
bench = false
path = "rust-bins/duniter-launcher/src/main.rs"
name = "duniter"

[dependencies]
anyhow = "1.0.32"
ctrlc = "3.1.6"
daemonize-me = "0.3.1"
dirs = "3.0.1"
log = "0.4.11"
logwatcher = "0.1.1"
nix = "0.17.0"
read_input = "0.8.4"
serde_json = "1.0.53"
structopt = "0.3.18"

[dev-dependencies]
rusty-hook = "0.11.2"

[workspace]
members = [
    "neon/native",
    "rust-bins/duniter-dbex",
    "rust-bins/xtask",
    "rust-libs/dubp-wot",
    "rust-libs/duniter-conf",
    "rust-libs/duniter-dbs",
    "rust-libs/duniter-dbs-read-ops",
    "rust-libs/duniter-dbs-write-ops",
    "rust-libs/duniter-mempools",
    "rust-libs/duniter-module",
    "rust-libs/duniter-server",
    "rust-libs/modules/gva",
    "rust-libs/modules/gva/dbs-reader",
    "rust-libs/tests/duniter-integration-tests",
    "rust-libs/tools/kv_typed"
]

[patch.crates-io]
#dubp = { git = "https://git.duniter.org/libs/dubp-rs-libs" }
#dubp-common = { git = "https://git.duniter.org/libs/dubp-rs-libs" }

#dubp = { path = "../dubp-rs-libs" }
#dubp-common = { path = "../dubp-rs-libs/common" }

#leveldb_minimal = { path = "../../../../rust/leveldb_minimal" }
