[package]
authors = ["elois <elois@duniter.org>"]
description = "Duniter cli."
edition = "2018"
keywords = ["duniter"]
license = "AGPL-3.0"
name = "duniter-cli"
repository = "https://git.duniter.org/nodes/typescript/duniter"
version = "1.8.1"

[[bin]]
bench = false
path = "rust-bins/duniter-cli/src/main.rs"
name = "duniter"

[dependencies]
anyhow = "1.0.32"
ctrlc = "3.1.6"
daemonize-me = "0.3.1"
dirs = "3.0.1"
duniter-core = { git = "https://git.duniter.org/nodes/rust/duniter-core", features = ["bc-writer"] }
log = "0.4.11"
logwatcher = "0.1.1"
nix = "0.17.0"
read_input = "0.8.4"
serde_json = "1.0.53"
structopt = "0.3.18"

[target.'cfg(target_arch = "x86_64")'.dependencies]
duniter-gva-conf = { git = "https://git.duniter.org/nodes/rust/modules/duniter-gva" }

[dev-dependencies]
rusty-hook = "0.11.2"

[workspace]
members = [
    "neon/native",
    "rust-bins/duniter-dbex",
    "rust-bins/xtask",
    "rust-libs/duniter-server",
    "rust-libs/tests/duniter-integration-tests",
]

[patch.'https://git.duniter.org/nodes/rust/duniter-core']
#duniter-core = { path = "../duniter-core" }

[patch.'https://git.duniter.org/nodes/rust/modules/duniter-gva']
#duniter-gva = { path = "../duniter-gva" }

[patch.crates-io]
#dubp = { git = "https://git.duniter.org/libs/dubp-rs-libs" }
#dubp = { path = "../dubp-rs-libs" }

#leveldb_minimal = { path = "../../../../rust/leveldb_minimal" }
