[package]
name = "duniteroxyde"
version = "1.8.1"
authors = ["librelois <elois@ifee.fr>"]
license = "AGPL-3.0"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "duniteroxyde"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
bincode = "1.2.1"
bs58 = "0.3.0"
duniter-core = { git = "https://git.duniter.org/nodes/rust/duniter-core", features = ["bc-writer"] }
duniter-server = { path = "../../rust-libs/duniter-server" }
flate2 = { version = "1.0", features = ["zlib-ng-compat"], default-features = false }
flexi_logger = { version = "=0.16.0", default-features = false, features = ["compress"] }
flume = "0.10.0"
log = "0.4.11"
neon = "0.4.0"
neon-serde = "0.4.0"
parking_lot = "0.11"
serde = { version = "1.0.105", features = ["derive"] }

[dev-dependencies]
unwrap = "1.2.1"
