[package]
name = "duniteroxyde"
version = "0.2.9"
authors = ["librelois <elois@ifee.fr>"]
license = "AGPL-3.0"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "duniteroxyde"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.10.0"

[dependencies]
bincode = "1.2.1"
bs58 = "0.3.0"
dup-crypto = { version = "0.15.0", default-features = false, features = ["rand"] }
dubp-wot = "=0.11.0"
flate2 = "1.0.14"
neon = "0.10.0"
