[package]
name = "duniteroxyde"
version = "0.2.9"
authors = ["librelois <elois@ifee.fr>"]
license = "AGPL-3.0"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "duniteroxyde"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.10.0"

[dependencies]
bincode = "1.2.1"
bs58 = "0.3.0"
dup-crypto = "0.58.0"
dubp-wot = "0.11.1"
flate2 = "1.0.14"
neon = "0.10.0"
