[package]
name = "duniter-dbex"
version = "0.1.0"
authors = ["elois <elois@duniter.org>"]
description = "Duniter blockchain DB"
repository = "https://git.duniter.org/nodes/typescript/duniter/rust-bins/duniter-dbs-explorer"
readme = "README.md"
keywords = ["duniter", "database"]
license = "AGPL-3.0"
edition = "2018"

[[bin]]
bench = false
path = "src/main.rs"
name = "dex"

[build-dependencies]
structopt = "0.3.16"

[dependencies]
arrayvec = "0.5.1"
comfy-table = "1.0.0"
dirs = "3.0.1"
dubp = { version = "0.29.0" }
duniter-dbs = { path = "../../rust-libs/duniter-dbs", default-features = false, features = ["explorer", "leveldb_backend", "sled_backend"] }
rayon = "1.3.1"
serde_json = "1.0.53"
structopt = "0.3.16"

[dev-dependencies]
serde = { version = "1.0.105", features = ["derive"] }
unwrap = "1.2.1"
