[package]
name = "duniter-dbex"
version = "0.1.0"
authors = ["elois <elois@duniter.org>"]
description = "Duniter blockchain DB"
repository = "https://git.duniter.org/nodes/typescript/duniter/rust-bins/duniter-dbs-explorer"
readme = "README.md"
keywords = ["duniter", "database"]
license = "AGPL-3.0"
edition = "2018"

[[bin]]
bench = false
path = "src/main.rs"
name = "dex"

[build-dependencies]
structopt = "0.3.16"

[dependencies]
anyhow = "1.0.33"
arrayvec = "0.5.1"
comfy-table = "1.0.0"
dirs = "3.0.1"
dubp = { version = "0.34.0" }
duniter-dbs = { path = "../../rust-libs/duniter-dbs", default-features = false, features = ["explorer", "leveldb_backend", "sled_backend"] }
duniter-dbs-write-ops = { path = "../../rust-libs/duniter-dbs-write-ops", default-features = false, features = ["explorer", "leveldb_backend", "sled_backend"] }
duniter-gva-db = { path = "../../rust-libs/modules/gva/db", default-features = false, features = ["explorer", "leveldb_backend"] }
duniter-gva-indexer = { path = "../../rust-libs/modules/gva/indexer" }
fast-threadpool = "0.2.3"
flume = "0.10.0"
once_cell = "1.5.2"
rayon = "1.3.1"
serde_json = "1.0.53"
structopt = "0.3.16"
termprogress = "0.3.4"

[dev-dependencies]
serde = { version = "1.0.105", features = ["derive"] }
unwrap = "1.2.1"
