[package]
name = "duniter-dbex"
version = "0.1.0"
authors = ["elois <elois@duniter.org>"]
description = "Duniter blockchain DB"
repository = "https://git.duniter.org/nodes/typescript/duniter/rust-bins/duniter-dbs-explorer"
readme = "README.md"
keywords = ["duniter", "database"]
license = "AGPL-3.0"
edition = "2018"

[[bin]]
bench = false
path = "src/main.rs"
name = "dex"

[build-dependencies]
structopt = "0.3.16"

[dependencies]
anyhow = "1.0.33"
arrayvec = "0.5.1"
comfy-table = "2.1.0"
dirs = "3.0.1"
dubp = { version = "0.54.1", features = ["duniter"] }
duniter-core = { git = "https://git.duniter.org/nodes/rust/duniter-core", features = ["bc-writer", "explorer", "leveldb_backend"] }
duniter-gva-db = { git = "https://git.duniter.org/nodes/rust/modules/duniter-gva", default-features = false, features = ["explorer", "leveldb_backend"] }
duniter-gva-indexer = { git = "https://git.duniter.org/nodes/rust/modules/duniter-gva" }
fast-threadpool = "0.2.3"
flume = "0.10.0"
once_cell = "1.7"
rayon = "1.3.1"
serde_json = "1.0.53"
structopt = "0.3.16"
termprogress = "0.3.4"

[dev-dependencies]
serde = { version = "1.0.105", features = ["derive"] }
unwrap = "1.2.1"
