[package]
name = "dubp-wot"
version = "0.11.0"
authors = ["nanocryk <nanocryk@duniter.org>", "elois <elois@duniter.org>"]
description = "Makes Web of Trust computations for the Duniter project."
repository = "https://git.duniter.org/nodes/typescript/duniter"
readme = "README.md"
keywords = ["duniter", "wot", "trust"]
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
log = "0.4.8"
rayon = "1.3.0"
serde = { version = "1.0.105", features = ["derive"] }

[dev-dependencies]
bincode = "1.2.0"
dubp-common = { version = "0.32.0", features = ["crypto_scrypt"] }

[features]
