[package]
name = "duniter-dbs-write-ops"
version = "0.1.0"
authors = ["elois <elois@duniter.org>"]
description = "Duniter DBs write operations"
repository = "https://git.duniter.org/nodes/typescript/duniter"
keywords = ["dubp", "duniter", "blockchain", "database"]
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
chrono = "0.4.19"
dubp = { version = "0.50.0", features = ["duniter"] }
duniter-dbs = { path = "../duniter-dbs" }
fast-threadpool = "0.2.3"
log = "0.4.11"
resiter = "0.4.0"

[dev-dependencies]
anyhow = "1.0.34"
duniter-dbs = { path = "../duniter-dbs", features = ["mem"] }
maplit = "1.0.2"
serde_json = "1.0.53"

[features]
default = ["sled_backend"]

explorer = ["duniter-dbs/explorer"]
leveldb_backend = ["duniter-dbs/leveldb_backend"]
sled_backend = ["duniter-dbs/sled_backend"]
