[package]
name = "duniter-dbs-writer"
version = "0.1.0"
authors = ["elois <elois@duniter.org>"]
description = "Duniter DBs writer"
repository = "https://git.duniter.org/nodes/typescript/duniter"
keywords = ["dubp", "duniter", "blockchain", "database"]
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
chrono = "0.4.19"
dubp = { version = "0.29.0" }
duniter-dbs = { path = "../duniter-dbs" }
flume = "0.9.1"
log = "0.4.11"
resiter = "0.4.0"

[dev-dependencies]
serde_json = "1.0.53"
