[package]
name = "duniter-dbs"
version = "0.1.0"
authors = ["elois <elois@duniter.org>"]
description = "Duniter blockchain DB"
repository = "https://git.duniter.org/nodes/typescript/duniter"
keywords = ["dubp", "duniter", "blockchain", "database"]
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
arrayvec = "0.5.1"
chrono = { version = "0.4.15", optional = true }
dubp-common = { version = "0.28.0", features = ["crypto_scrypt"] }
dubp-documents = { version = "0.28.0", features = ["crypto_scrypt"] }
kv_typed = { path = "../tools/kv_typed", default-features = false }
log = "0.4.8"
mockall = { version = "0.8.0", optional = true }
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.53"
smallvec = { version = "1.4.0", features = ["serde"] }
thiserror = "1.0.20"

[dev-dependencies]
once_cell = "1.4.0"
tempdir = "0.3.7"
unwrap = "1.2.1"

[features]
default = ["leveldb_backend", "memory_backend", "sled_backend", "subscription", "sync"]

explorer = ["chrono", "kv_typed/explorer"]
leveldb_backend = ["kv_typed/leveldb_backend"]
memory_backend = ["kv_typed/memory_backend"]
mock = ["kv_typed/mock", "mockall"]
sled_backend = ["kv_typed/sled_backend"]
subscription = ["kv_typed/subscription"]
sync = ["kv_typed/sync"]
