[package]
name = "duniter-dbs"
version = "0.1.0"
authors = ["elois <elois@duniter.org>"]
description = "Duniter blockchain DB"
repository = "https://git.duniter.org/nodes/typescript/duniter"
keywords = ["dubp", "duniter", "blockchain", "database"]
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
arrayvec = "0.5.1"
bincode = "1.2.1"
byteorder = "1.3.4"
chrono = { version = "0.4.15", optional = true }
dubp = { version = "0.32.1" }
kv_typed = { path = "../tools/kv_typed", default-features = false }
log = "0.4.8"
mockall = { version = "0.8.0", optional = true }
paste = "1.0.2"
rand = "0.7.3"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.53"
smallvec = { version = "1.4.0", features = ["serde", "write"] }
thiserror = "1.0.20"
uninit = "0.4.0"
zerocopy = "0.3.0"

[dev-dependencies]
once_cell = "1.4.0"
tempdir = "0.3.7"
unwrap = "1.2.1"

[features]
default = ["sled_backend"]

explorer = ["chrono", "kv_typed/explorer"]
leveldb_backend = ["kv_typed/leveldb_backend"]
mem = []
#mock = ["kv_typed/mock", "mockall"]
sled_backend = ["kv_typed/sled_backend"]
