[package]
name = "duniter-global"
version = "1.8.1"
authors = ["librelois <elois@duniter.org>"]
license = "AGPL-3.0"
edition = "2018"

[dependencies]
async-rwlock = "1.3.0"
dubp = { version = "0.51.0", features = ["duniter"] }
duniter-dbs = { path = "../duniter-dbs" }
flume = "0.10"
mockall = { version = "0.9", optional = true }
once_cell = "1.5"
tokio = { version = "1.2", features = ["io-util", "rt-multi-thread"] }

[features]
mock = ["mockall"]
