[package]
name = "duniter-module"
version = "0.1.0"
authors = ["librelois <elois@duniter.org>"]
license = "AGPL-3.0"
edition = "2018"

[dependencies]
anyhow = "1.0.34"
async-trait = "0.1.41"
dubp = { version = "0.51.0", features = ["duniter"] }
duniter-conf = { path = "../duniter-conf" }
duniter-dbs = { path = "../duniter-dbs" }
duniter-global = { path = "../duniter-global" }
duniter-mempools = { path = "../duniter-mempools" }
fast-threadpool = "0.2.3"
log = "0.4"

[dev-dependencies]
duniter-dbs = { path = "../duniter-dbs", features = ["mem"] }
paste = "1.0.2"
tokio = { version = "1.2", features = ["macros", "rt"] }
