[package]
name = "duniter-server"
version = "1.8.1"
authors = ["librelois <elois@duniter.org>"]
license = "AGPL-3.0"
edition = "2018"

[dependencies]
anyhow = "1.0.34"
cfg-if = "1.0.0"
dubp = { version = "0.51.0", features = ["duniter"] }
duniter-conf = { path = "../duniter-conf" }
duniter-bc-reader = { path = "../duniter-bc-reader" }
duniter-dbs = { path = "../duniter-dbs" }
duniter-dbs-write-ops = { path = "../duniter-dbs-write-ops" }
duniter-global = { path = "../duniter-global" }
duniter-gva = { path = "../modules/gva", optional = true }
duniter-mempools = { path = "../duniter-mempools" }
duniter-module = { path = "../duniter-module" }
fast-threadpool = "0.2.3"
flume = "0.10.0"
log = "0.4.11"
paste = "1.0.2"
resiter = "0.4.0"

[features]
default = ["gva"]

gva = ["duniter-gva"]

[dev-dependencies]
duniter-dbs = { path = "../duniter-dbs", features = ["mem"] }
