[package]
name = "duniter-gva"
version = "0.1.0"
authors = ["librelois <elois@duniter.org>"]
license = "AGPL-3.0"
edition = "2018"

[dependencies]
anyhow = "1.0.33"
arrayvec = "0.5.1"
async-graphql = "2.0.0"
async-trait = "0.1.41"
dubp = { version = "0.32.2" }
duniter-conf = { path = "../../duniter-conf" }
duniter-dbs = { path = "../../duniter-dbs" }
duniter-dbs-read-ops = { path = "../../duniter-dbs-read-ops" }
duniter-mempools = { path = "../../duniter-mempools" }
duniter-module = { path = "../../duniter-module" }
fast-threadpool = "0.2.1"
flume = "0.9.1"
futures = "0.3.6"
http = "0.2.1"
log = "0.4.11"
resiter = "0.4.0"
serde = { version = "1.0.105", features = ["derive"] }
serde_urlencoded = "0.7.0"
tokio = { version = "0.2.22", features = ["io-util", "rt-threaded"] }
warp = "0.2"

[dev-dependencies]
duniter-dbs = { path = "../../duniter-dbs", features = ["mem"] }
tokio = { version = "0.2.22", features = ["macros", "rt-threaded"] }
unwrap = "1.2.1"
