[package]
name = "duniter-gva"
version = "0.1.0"
authors = ["librelois <elois@duniter.org>"]
license = "AGPL-3.0"
edition = "2018"

[dependencies]
anyhow = "1.0.33"
arrayvec = "0.5.1"
async-graphql = "2.2.0"
async-mutex = "1.4.0"
async-trait = "0.1.41"
dubp = { version = "0.47.0" }
duniter-conf = { path = "../../duniter-conf" }
duniter-dbs = { path = "../../duniter-dbs" }
duniter-gva-db = { path = "./db" }
duniter-gva-dbs-reader = { path = "./dbs-reader" }
duniter-gva-indexer = { path = "./indexer" }
duniter-gva-gql = { path = "./gql" }
duniter-mempools = { path = "../../duniter-mempools" }
duniter-module = { path = "../../duniter-module" }
fast-threadpool = "0.2.3"
flume = "0.10.0"
futures = "0.3.6"
http = "0.2.1"
log = "0.4.11"
resiter = "0.4.0"
serde = { version = "1.0.105", features = ["derive"] }
serde_urlencoded = "0.7.0"
tokio = { version = "1.2", features = ["io-util", "rt-multi-thread"] }
warp = "0.3"

[dev-dependencies]
duniter-dbs = { path = "../../duniter-dbs", features = ["mem"] }
mockall = "0.8.0"
serde_json = "1.0.53"
tokio = { version = "1.2", features = ["macros", "rt-multi-thread", "time"] }
unwrap = "1.2.1"
