[package]
name = "duniter-integration-tests"
version = "0.1.0"
authors = ["librelois <elois@duniter.org>"]
license = "AGPL-3.0"
edition = "2018"

[dependencies]
anyhow = "1.0.34"
dubp = { version = "0.34.0" }
duniter-conf = { path = "../../duniter-conf" }
duniter-dbs = { path = "../../duniter-dbs" }
duniter-dbs-read-ops = { path = "../../duniter-dbs-read-ops" }
duniter-dbs-write-ops = { path = "../../duniter-dbs-write-ops" }
duniter-mempools = { path = "../../duniter-mempools" }
duniter-module = { path = "../../duniter-module" }
duniter-server = { path = "../../duniter-server", features = ["gva"] }
fast-threadpool = "0.2.3"
flume = "0.10.0"
log = "0.4.11"
paste = "1.0.2"
resiter = "0.4.0"
tokio = { version = "0.2.22", features = ["io-util", "rt-threaded"] }
