[package]
name = "duniter-integration-tests"
version = "0.1.0"
authors = ["librelois <elois@duniter.org>"]
license = "AGPL-3.0"
edition = "2018"

[dependencies]
anyhow = "1.0.34"
chrono = "0.4"
duniter-core = { git = "https://git.duniter.org/nodes/rust/duniter-core", features = ["bc-writer"] }
duniter-server = { path = "../../duniter-server", features = ["gva"] }
fast-threadpool = "0.2.3"
flume = "0.10.0"
log = "0.4.11"
paste = "1.0.2"
resiter = "0.4.0"
tokio = { version = "1.2", features = ["io-util", "rt-multi-thread"] }
