[package]
name = "kv_typed"
version = "0.1.0"
authors = ["elois <c@elo.tf>"]
description = "Strongly typed key-value storage"
repository = "https://git.duniter.org/nodes/typescript/duniter"
keywords = ["database", "key", "sled"]
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
byteorder = "1.3.4"
cfg-if = "0.1.10"
flume = "0.10.0"
leveldb_minimal = { version = "0.1.0", optional = true }
lmdb-zero = { version = "0.4.4", optional = true }
mockall = { version = "0.8.0", optional = true }
parking_lot = "0.11.0"
paste = "1.0.2"
rayon = { version = "1.3.1", optional = true }
regex = { version = "1.3.9", optional = true }
serde_json = { version = "1.0.53", optional = true }
sled = { version = "0.34.6", optional = true, features = ["compression"] }
smallvec = { version = "1.4.0", features = ["serde", "write"] }
thiserror = "1.0.20"
uninit = "0.4.0"
zerocopy = "0.3.0"

[[bench]]
name = "compare_backends"
harness = false
required-features = ["leveldb_backend", "sled_backend"]

[dev-dependencies]
async-std = { version = "1.6.3", features = ["attributes"] }
maybe-async = "0.2.0"
smallvec = { version = "1.4.0", features = ["serde", "write"] }
tempfile = "3.2.0"
unwrap = "1.2.1"

# Benches dependencies
criterion = { version = "0.3.1" }

[features]
#default = ["sled_backend"]

async = []
explorer = ["rayon", "regex", "serde_json"]
leveldb_backend = ["leveldb_minimal"]
lmdb_backend = ["lmdb-zero"]
sled_backend = ["sled"]

#mock = ["mockall"]

default = ["sled_backend", "explorer"]
#default = ["mock"]
