[package]
name = "kv_typed_code_gen"
version = "0.1.0"
authors = ["elois <c@elo.tf>"]
description = "Macros to generate code for kv_typed users"
repository = "https://git.duniter.org/nodes/typescript/duniter"
keywords = ["database", "macro", "key", "sled"]
license = "AGPL-3.0"
edition = "2018"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
Inflector = "0.11.4"
proc-macro2 = "1.0.20"
quote = "1.0"
syn = { version = "1.0.39", features = ["full"] }
