[package]
name = "duniter-gva-dbs-reader"
version = "0.1.0"
authors = ["elois <elois@duniter.org>"]
description = "Duniter GVA DBs read operations"
repository = "https://git.duniter.org/nodes/typescript/duniter"
keywords = ["dubp", "duniter", "blockchain", "database"]
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[features]
mock = ["mockall"]

[dependencies]
anyhow = "1.0.34"
arrayvec = "0.5.1"
duniter-dbs = { path = "../../../duniter-dbs" }
duniter-gva-db = { path = "../db" }
dubp = { version = "0.49.0", features = ["duniter"] }
mockall = { version = "0.9.1", optional = true }
resiter = "0.4.0"

[dev-dependencies]
duniter-dbs = { path = "../../../duniter-dbs", features = ["mem"] }
maplit = "1.0.2"
smallvec = { version = "1.4.0", features = ["serde", "write"] }
unwrap = "1.2.1"
