[package]
name = "duniter-gva-gql"
version = "0.1.0"
authors = ["librelois <elois@duniter.org>"]
license = "AGPL-3.0"
edition = "2018"

[dependencies]
anyhow = "1.0.33"
arrayvec = "0.5.1"
async-graphql = "2.2.0"
async-trait = "0.1.41"
dubp = { version = "0.49.0", features = ["duniter"] }
duniter-conf = { path = "../../../duniter-conf" }
duniter-dbs = { path = "../../../duniter-dbs" }
duniter-bc-reader = { path = "../../../duniter-bc-reader" }
duniter-gva-db = { path = "../db" }
duniter-gva-dbs-reader = { path = "../dbs-reader" }
duniter-mempools = { path = "../../../duniter-mempools" }
duniter-module = { path = "../../../duniter-module" }
fast-threadpool = "0.2.3"
flume = "0.10.0"
futures = "0.3.6"
log = "0.4.11"
resiter = "0.4.0"
serde = { version = "1.0.105", features = ["derive"] }

[dev-dependencies]
duniter-dbs = { path = "../../../duniter-dbs", features = ["mem"] }
duniter-gva-dbs-reader = { path = "../dbs-reader", features = ["mock"] }
mockall = "0.9.1"
serde_json = "1.0.53"
tokio = { version = "1.2", features = ["macros", "rt-multi-thread", "time"] }
unwrap = "1.2.1"
