[package]
name = "duniter-gva-indexer"
version = "0.1.0"
authors = ["elois <elois@duniter.org>"]
description = "Duniter GVA DB writer"
repository = "https://git.duniter.org/nodes/typescript/duniter"
keywords = ["dubp", "duniter", "blockchain", "database"]
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.34"
duniter-dbs = { path = "../../../duniter-dbs" }
duniter-gva-db = { path = "../db" }
dubp = { version = "0.47.0" }
once_cell = "1.5.2"
resiter = "0.4.0"

[dev-dependencies]
duniter-dbs = { path = "../../../duniter-dbs", features = ["mem"] }
maplit = "1.0.2"
smallvec = { version = "1.4.0", features = ["serde", "write"] }
