[package]
name = "duniter-bca-types"
version = "0.1.0"
authors = ["librelois <elois@duniter.org>"]
license = "AGPL-3.0"
edition = "2018"

[dependencies]
bincode = "1.3"
dubp = { version = "0.49.0" }
serde = { version = "1.0.105", features = ["derive"] }
thiserror = "1.0.20"

[features]
default = ["duniter"]

client = ["dubp/client"]
duniter = ["dubp/duniter"]
